# EvalQAFactory

./: .gitignore  README.md  concierge_generator.py  env_example  generator.py  pyproject.toml
configs/: example_config.py
data/example_domain/: S01_search_results.json  S02_assignment_details.json  S03_contact_details.json  S04_manager_contacts.json
scripts/: generate_all.sh
utils/: __init__.py  data_discovery.py  statistical_rigor.py
